# AgentsX

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agentsx/: __init__.py  compaction.py  config.py  orchestrator.py  security.py  session.py
agentsx/agent/: __init__.py  agent.py  loop.py  subagent.py
agentsx/cli/: commands.py  main.py  repl.py
agentsx/context/: __init__.py  compaction.py  manager.py  summarizer.py  trajectory.py
agentsx/core/: __init__.py  compaction.py  errors.py  types.py
agentsx/extensions/: __init__.py  api.py
agentsx/provider/: __init__.py  anthropic.py  generic.py  openai.py  retry.py
agentsx/security/: __init__.py  command_guard.py  path_guard.py  policy.py  resource_limits.py
agentsx/session/: __init__.py  store.py
agentsx/tools/: __init__.py  mcp_client.py
agentsx/tools/builtin/: __init__.py  filesystem.py  shell.py  subagent.py  web.py
agentsx/tools/builtin/exec/: __init__.py
agentsx/tools/builtin/orchestration/: __init__.py  subagent.py
agentsx/workspace/: __init__.py  file_tree.py  git.py  manager.py
docs/: documentation.md
frontend/: index.html  package.json
frontend/src/: App.tsx  types.ts
tests/: conftest.py  test_agent.py  test_command_guard.py  test_commands.py  test_compaction.py  test_extensions.py  test_path_guard.py  test_provider.py  test_resource_limits.py  test_retry.py  test_security.py  test_session.py  test_subagent.py  test_summarizer.py  test_tool.py  test_tools.py  test_trajectory.py  test_types.py  test_workspace.py
(+5 files in other folders)
