[project]
name = "agentsx"
version = "0.1.0"
description = "A feature-rich, clean, efficient, extensible Agent Harness"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AgentsX Contributors"}]

dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "typer>=0.9,<1",
    "prompt-toolkit>=3.0,<4",
    "httpx>=0.27,<1",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
openai = ["openai>=1.0,<2"]
anthropic = ["anthropic>=0.30,<1"]
dev = [
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
agentsx = "agentsx.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentsx"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "BLE", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_subclassing_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
